# haskell-shapes

./: .gitignore  LICENSE  README.md  shapesSVG.cabal
src/: Example.hs  Lib.hs  Main.hs  Shapes.hs
