name:                shapesSVG
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shapesSVG#readme
license:             BSD3
license-file:        LICENSE
author:              Dylan Hobbs
maintainer:          dhobbs@tcd.ie
copyright:           wut
category:            assignment
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , blaze-svg
                     , blaze-html
                     , blaze-markup
                     , scotty
                     , unix
                     , colour
  default-language:    Haskell2010

executable shapesSVG
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shapesSVG
                     , text
                     , blaze-svg
                     , blaze-html
                     , blaze-markup
                     , scotty
                     , unix
                     , colour
  default-language:    Haskell2010

test-suite shapesSVG-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shapesSVG
                     , hspec
                     , QuickCheck
                     , text
                     , blaze-svg
                     , blaze-html
                     , blaze-markup
                     , scotty
                     , unix
                     , colour
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shapesSVG
